Merged in feature/CAP-460 (pull request #396)
CAP-460 - TransactionLimitService permissions

* Made service method package-private

* Fixed some package-private compile errors


Approved-by: Slava Akimov